wip search for email

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: darkseagreen;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -29,16 +29,27 @@
   color: #61dafb;
 }
 
+.ComposeButton {
+  background: darkslategrey;
+  font-weight: bold;
+  font-size: 36px;
+  color: white;
+  align-self: flex-start;
+  width: 360px;
+  height: 60px;
+  margin: -40px 0px 10px 110px;
+}
+
 .EmailHeaderContainer {
   padding: 60px 0px;
   width: 95%;
-  background: deeppink;
+  background: white;
   display: flex;
   flex-direction: column;
 }
 
 .EmailHeaderRow {
-  color: aqua;
+  color: black;
   padding: 10px 100px;
   margin: 10px;
   width: 90%;
@@ -46,12 +57,26 @@
 
 .EmailHeaderRowContainer {
   align-self: center;
-  border: 3px white solid;
+  border: 3px black solid;
   margin: 3px 0;
   justify-content: space-between;
   display: flex;
   padding: 0px;
-  background: orangered;
+  background: lightgrey;
+  width: 90%;
+}
+
+.FocusEmail {
+  border: 2px darkslategrey solid;
+  padding: 20px;
+}
+
+.FocusEmailContainer {
+  align-self: center;
+  border: 3px black solid;
+  display: flex;
+  flex-direction: column;
+  background: lightgrey;
   width: 90%;
 }
 
